--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -67,12 +67,12 @@ ul.indent {
 }
 
 ::selection {
-	background: #D45328;
+	background: #DD3300;
 	color: white;
 }
 
 ::-moz-selection {
-	background: #D45328;
+	background: #DD3300;
 	color: white;
 }
 
@@ -100,7 +100,7 @@ a#skip-main:focus, a#skip-main:active {
 	background-color: rgba(255, 255, 255, 0.6);
 	display: block;
 	clear: both;
-	color: #D45328;
+	color: #DD3300;
 	left: auto;
 	position: relative;
 	text-decoration: underline dotted;
@@ -158,7 +158,7 @@ header {
 }
 
 #logo a:link, #logo a:visited {
-	color: #D45328;
+	color: #DD3300;
 	text-decoration: none;
 }
 
@@ -304,7 +304,7 @@ main p {
 }
 
 main a:link, main a:visited {
-	color: #D45328;
+	color: #DD3300;
 	text-decoration: underline dotted;
 }
 
@@ -327,10 +327,10 @@ main a:hover, main a:active, main a:focus {
 hr { 
  	border: 0; 
  	height: 1px; 
- 	background-image: linear-gradient(to right, rgba(77, 77, 77, 0), rgba(77, 77, 77, 0.75), rgba(77, 77, 77, 0));
- 	background-image: -moz-linear-gradient(to right, rgba(77, 77, 77, 0), rgba(77, 77, 77, 0.75), rgba(77, 77, 77, 0));
-	background-image: -o-linear-gradient(to right, rgba(77, 77, 77, 0), rgba(77, 77, 77, 0.75), rgba(77, 77, 77, 0));
-	background-image: -webkit-linear-gradient(to right, rgba(77, 77, 77, 0), rgba(77, 77, 77, 0.75), rgba(77, 77, 77, 0));
+ 	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+ 	background-image: -moz-linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+	background-image: -o-linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+	background-image: -webkit-linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
  }
 
 img .left {
